samples/_failures_safe/1761502987_4ab9de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af7d8199.c: In function ‘main’:
./samples/SAFE/__tmp_af7d8199.c:135:15: error: expected ‘;’ at end of input
  135 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_af7d8199.c:135:9: error: expected declaration or statement at end of input
  135 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_af7d8199.c:135:9: error: expected declaration or statement at end of input
